# indycar-data-parsing

./: .coveragerc  .pytest.ini  .repomixignore  LICENSE  README.md  coverage.lcov  pyproject.toml  repomix-output.xml
src/indycar_data_parsing/: __init__.py  pdf_reader.py  section_times_parser.py
src/indycar_data_parsing/tests/: test_pdf_reader.py  test_section_time_parser.py
