[project]
name = "indycar-data-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]
